# CAD-to-OpenUSD

./: .gitattributes  README.md  config.json  pyproject.toml
docs/: conf.py  index.md
kit/: premake5.lua  repo.toml
kit/source/: rendered_template_metadata.json
kit/source/apps/: ovcommunity.converter.kit
src/cad2usd/: __init__.py
